--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,3 +4,31 @@
 // $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 // @import 'font-awesome';
 @import 'box-sizing';
+@import 'resets';
+@import 'section';
+@import 'box-top';
+
+$c-user: #9bd57d;
+
+
+.user-box__bottom {
+
+}
+
+.user-data {
+  margin: 0;
+
+
+  > * + * {
+    border-top: 1px solid #d1cdce;
+  }
+}
+
+.icon {
+
+}
+
+
+.user-data__item {
+  padding: 1rem;
+}
