--- a/app/styles/_box-top.scss
+++ b/app/styles/_box-top.scss
@@ -28,10 +28,9 @@ $c-user: #9bd57d;
 .image-box {
   display: flex;
   justify-content: center;
-  padding: 3rem;
+  padding: 2rem;
 }
 
 .user-image {
-
-
+  border-radius: 50%;
 }
