Touch ups on JS and CSS

--- a/app/styles/_box-top.scss
+++ b/app/styles/_box-top.scss
@@ -28,7 +28,7 @@ $c-user: #9bd57d;
 .image-box {
   display: flex;
   justify-content: center;
-  padding: 2rem;
+  padding-bottom: 1rem;
 }
 
 .user-image {
